...
                                                        <variation key="heightClass=regular-widthClass=regular">
                                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="35"/>
                                                        </variation>
                                                    </label>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wZJ-wi-uma">
                                                        <rect key="frame" x="0.0" y="61" width="354" height="56"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="username"/>
                                                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="20"/>
                                                        <textInputTraits key="textInputTraits"/>
                                                        <variation key="heightClass=regular-widthClass=regular">
                                                            <fontDescription key="fontDescription" type="system" pointSize="35"/>
                                                        </variation>
                                                    </textField>
...
                                                        <variation key="heightClass=regular-widthClass=regular">
                                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="35"/>
                                                        </variation>
                                                    </label>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Z41-LM-lmE">
                                                        <rect key="frame" x="0.0" y="61" width="354" height="56"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="password"/>
                                                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="20"/>
                                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                                        <variation key="heightClass=regular-widthClass=regular">
                                                            <fontDescription key="fontDescription" type="system" pointSize="35"/>
                                                        </variation>
                                                    </textField>
...
                                            </stackView>
                                        </subviews>
                                    </stackView>
                                    <button opaque="NO" contentMode="scaleToFill" layoutMarginsFollowReadableWidth="YES" insetsLayoutMarginsFromSafeArea="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HmX-8n-74m">
                                        <rect key="frame" x="30" y="633.66666666666663" width="354" height="40.333333333333371"/>
                                        <color key="backgroundColor" red="1" green="0.41960784313725491" blue="0.41960784313725491" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="loginSignIn"/>
                                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="25"/>
                                        <state key="normal" title="Sign In">
                                            <color key="titleColor" red="0.94509803921568625" green="0.98039215686274506" blue="0.93333333333333335" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
                                        <variation key="heightClass=regular-widthClass=regular">
                                            <fontDescription key="fontDescription" type="system" pointSize="35"/>
                                        </variation>
                                        <connections>
...
                                    <constraint firstAttribute="trailing" secondItem="HmX-8n-74m" secondAttribute="trailing" constant="30" id="uUS-n4-AaD"/>
                                    <constraint firstItem="ZvD-zY-b04" firstAttribute="height" secondItem="r4l-pp-0vY" secondAttribute="height" multiplier="0.2" id="vD8-Xj-OVK"/>
                                </constraints>
                            </view>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="loginView"/>
                        <constraints>
                            <constraint firstItem="wQq-d3-wtB" firstAttribute="width" secondItem="ihN-hd-7rU" secondAttribute="width" multiplier="0.15" id="8s2-na-2Gl"/>
                            <constraint firstItem="r4l-pp-0vY" firstAttribute="leading" secondItem="m9M-8C-NMS" secondAttribute="leading" id="Fv3-7I-Bcg"/>
                            <constraint firstItem="oKr-Fz-PVN" firstAttribute="height" secondItem="ihN-hd-7rU" secondAttribute="height" multiplier="0.0369458" id="MYr-RO-ejE"/>
                            <constraint firstAttribute="bottom" secondItem="r4l-pp-0vY" secondAttribute="bottom" id="VQt-MU-CKC"/>
                            <constraint firstItem="r4l-pp-0vY" firstAttribute="top" secondItem="ihN-hd-7rU" secondAttribute="top" id="n6e-se-lUA"/>
...
