...
                                    <constraint firstAttribute="trailing" secondItem="UKX-Ox-ASU" secondAttribute="trailing" constant="30" id="u4p-lE-6no"/>
                                    <constraint firstItem="UKX-Ox-ASU" firstAttribute="leading" secondItem="ilG-z0-XBu" secondAttribute="leading" constant="30" id="we1-2d-4zg"/>
                                </constraints>
                            </view>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="registerView"/>
                        <constraints>
                            <constraint firstItem="ilG-z0-XBu" firstAttribute="top" secondItem="WQG-qQ-13R" secondAttribute="top" id="LkR-m0-oWY"/>
                            <constraint firstAttribute="bottom" secondItem="ilG-z0-XBu" secondAttribute="bottom" id="bYf-di-oxu"/>
                            <constraint firstItem="ilG-z0-XBu" firstAttribute="leading" secondItem="WQG-qQ-13R" secondAttribute="leading" id="fxH-UR-4Rv"/>
                            <constraint firstItem="H4u-b9-ZuK" firstAttribute="height" secondItem="WQG-qQ-13R" secondAttribute="height" multiplier="0.4" id="gVZ-Cn-tsi"/>
                            <constraint firstAttribute="trailing" secondItem="ilG-z0-XBu" secondAttribute="trailing" id="jcW-9R-Zn7"/>
...
